Closed Bug 1071704 Opened 10 years ago Closed 10 years ago

HWC hooks registration should not depend on H/W Vsync

Categories

(Core Graveyard :: Widget: Gonk, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:2.1+, firefox33 wontfix, firefox34 fixed, firefox35 fixed, b2g-v2.1 fixed, b2g-v2.2 fixed)

RESOLVED FIXED
mozilla35
blocking-b2g 2.1+
Tracking Status
firefox33 --- wontfix
firefox34 --- fixed
firefox35 --- fixed
b2g-v2.1 --- fixed
b2g-v2.2 --- fixed

People

(Reporter: sushilchauhan, Assigned: sushilchauhan)

References

Details

Attachments

(1 file, 1 obsolete file)

Registration of HWC hooks should not be blocked by gfx preference, which is used to enable H/W Vsync. I have attached the patch which fixes it.
Attachment #8493861 - Flags: review?(sotaro.ikeda.g)
Attachment #8493861 - Flags: review?(boris.chiou)
Assignee: nobody → sushilchauhan
Blocks: 1005322
Attachment #8493861 - Flags: review?(sotaro.ikeda.g) → review+
Uploading HG friendly version of reviewed patch.
Attachment #8493861 - Attachment is obsolete: true
Attachment #8493861 - Flags: review?(boris.chiou)
Attachment #8493900 - Flags: review+
Try server link: https://hg.mozilla.org/try/rev/d15cf8ab4c2e
Keywords: checkin-needed
Sotaro, I am facing issues while pushing patch to Try Server, so can you please push the reviewed patch to Try server ? I also sent mail about Try server issue.
Flags: needinfo?(sotaro.ikeda.g)
Update on Try server: https://tbpl.mozilla.org/?tree=Try&rev=445eeb1e2e82
https://hg.mozilla.org/mozilla-central/rev/d5ee070ddad3
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
[Blocking Requested - why for this release]: Required to enable HWC invalidate hook registration.
blocking-b2g: --- → 2.1?
Bhavna, this needs v2.1+ too.
Flags: needinfo?(bbajaj)
Blocking as this blocks the CAF metabug.
blocking-b2g: 2.1? → 2.1+
Flags: needinfo?(bbajaj)
Comment on attachment 8493900 [details] [diff] [review]
HWC hooks registration should not depend on H/W Vsync. r=sotaro

Approval Request Comment
[Feature/regressing bug #]: Power optimization in static display use cases, which use full/partial HWC Composition path.
[User impact if declined]: No user impact but power numbers will not be optimized.
[Describe test coverage new/current, TBPL]: Did basic display sanity, including Video playback, Camera/Camcorder, static use cases, UI, etc.
[Risks and why]: No
[String/UUID change made/needed]: No
Attachment #8493900 - Flags: approval-mozilla-aurora?
Attachment #8493900 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: