Bug 1071704 - HWC hooks registration should not depend on H/W Vsync. r=sotaro, a=bajaj